--- a/branches/branch_filesharing/src/slirp/CMakeLists.txt
+++ b/branches/branch_filesharing/src/slirp/CMakeLists.txt
@@ -25,10 +25,9 @@ add_library(Slirp
             mbuf.c misc.c sbuf.c slirp.c slirpdebug.c socket.c 
             tcp_input.c tcp_output.c tcp_subr.c tcp_timer.c tftp.c udp.c
 
-            nfs/compat.cpp nfs/FileTree.cpp
+            nfs/compat.cpp nfs/unicode.cpp nfs/FileTree.cpp
             nfs/XDRStream.cpp nfs/Socket.cpp nfs/TCPServerSocket.cpp nfs/UDPServerSocket.cpp
-            nfs/nfsd.cpp
-            nfs/RPCServer.cpp
+            nfs/nfsd.cpp nfs/RPCServer.cpp nfs/VDNS.cpp
             nfs/RPCProg.cpp nfs/PortmapProg.cpp nfs/MountProg.cpp nfs/NFSProg.cpp nfs/NFS2Prog.cpp nfs/NFS3Prog.cpp nfs/BootparamProg.cpp
             nfs/FileTable.cpp
 			)
