many bug fixes and added symlink support
git-svn-id: https://svn.code.sf.net/p/previous/code@932 9ba66e4b-2233-44b8-a46a-7e93b2105c9e

--- a/branches/branch_filesharing/src/slirp/CMakeLists.txt
+++ b/branches/branch_filesharing/src/slirp/CMakeLists.txt
@@ -28,6 +28,6 @@ add_library(Slirp
             nfs/compat.cpp nfs/unicode.cpp
             nfs/XDRStream.cpp nfs/Socket.cpp nfs/TCPServerSocket.cpp nfs/UDPServerSocket.cpp
             nfs/nfsd.cpp nfs/RPCServer.cpp nfs/VDNS.cpp
-            nfs/RPCProg.cpp nfs/PortmapProg.cpp nfs/MountProg.cpp nfs/NFSProg.cpp nfs/NFS2Prog.cpp nfs/NFS3Prog.cpp nfs/BootparamProg.cpp
+            nfs/RPCProg.cpp nfs/PortmapProg.cpp nfs/MountProg.cpp nfs/NFSProg.cpp nfs/NFS2Prog.cpp nfs/BootparamProg.cpp
             nfs/FileTable.cpp
 			)
